crates/core/tests/snapshots/protocol_golden__v1_combined_prompt.snap
---
source: crates/core/tests/protocol_golden.rs
expression: s
---
You are operating directly inside the repository this plan refers to.
You have full file access — use it.

Below is a plan produced by a planner AI (any web AI: Grok, ChatGPT,
Gemini, Claude) using protocol version plan-exec-v1. Your role in this
workflow is EXECUTOR with veto power.

## How to handle this plan

1. **Read the entire plan first.** Don't start executing step 1 until
   you've read every step, the Risks section, and the Verification
   section.

2. **Evaluate every Rationale.** For each step, decide whether the
   rationale holds given what you can see in the actual repo. You have
   context the planner did not — files may have changed, the planner
   may have misread the codebase, or there may be a simpler approach.

3. **Challenge before executing.** If you disagree with a step, STOP
   and tell the user:
   - Which step you disagree with.
   - What the planner's rationale was.
   - Why you think it is wrong or suboptimal.
   - What you propose instead.
   Wait for the user's decision before proceeding.

4. **Execute step-by-step, not all at once.** After each step:
   - Run any obvious verification (the file compiles, imports resolve,
     a quick targeted test passes).
   - If something fails or looks wrong, stop and report. Do not paper
     over a failing step to keep the plan moving.

5. **Run the Verification section at the end.** Report the result of
   each item.

6. **Stay within scope.** Do not refactor adjacent code, fix unrelated
   bugs, or add features beyond what the plan specifies — even if you
   notice issues. Mention them in your final summary instead.

## Plan follows

---

### Summary
A tiny plan.

### Risks
- None.

### Steps

#### Step 1: Do the thing
**Action:** create
**Target:** src/thing.rs
**Rationale:** This is needed for the feature to exist.
**Details:**
```rust
pub fn thing() {}
```

### Verification
- `cargo test` passes.

### Rollback
- `git revert`.
